Updating to latest server names.

--- a/src/hpc-web/src/main/resources/appconfigs/local-env.conf
+++ b/src/hpc-web/src/main/resources/appconfigs/local-env.conf
@@ -3,9 +3,9 @@ gov.nih.nci.hpc.login.module=ldap
 #gov.nih.nci.hpc.login.module=hpc
 
 #gov.nih.nci.hpc.server=https://localhost:7738/hpc-server
-#gov.nih.nci.hpc.server=https://fsdsl-dmeapi01d.ncifcrf.gov:7738/hpc-server
-gov.nih.nci.hpc.server=https://fsdmel-dsapi01t.ncifcrf.gov:7738/hpc-server
-#gov.nih.nci.hpc.server=https://fsdmel-apibp01p.ncifcrf.gov:8080
+gov.nih.nci.hpc.server=https://fsdsgl-dmeap01d.ncifcrf.gov:7738/hpc-server
+#gov.nih.nci.hpc.server=https://fsdsgl-dmeap01t.ncifcrf.gov:7738/hpc-server
+#gov.nih.nci.hpc.server=https://hpcdmeapi.nci.nih.gov:8080
 
 gov.nih.nci.hpc.ssl.cert=c:\\DEV\\temp\\DEV\\keystore.jks
 gov.nih.nci.hpc.ssl.cert.password=< Configure Me >
@@ -19,7 +19,7 @@ hpc.serviceaccount=ncif-hpcdm-svc
 
 logging.file=hpcweb.log
 logging.level.org.hibernate=ERROR
-logging.level.org.springframework.web=DEBUG
+logging.level.org.springframework.web=ERROR
 logging.level.root=INFO
 
 server.port=${port:9080}
