--- a/src/hpc-web/src/main/resources/appconfigs/preprod-env.conf
+++ b/src/hpc-web/src/main/resources/appconfigs/preprod-env.conf
@@ -1,7 +1,7 @@
 app.env=UAT
 #gov.nih.nci.hpc.login.module=ldap
 
-gov.nih.nci.hpc.server=https://fsdmel-dsapi01t.ncifcrf.gov:7738/hpc-server
+gov.nih.nci.hpc.server=https://fsdsgl-dmeap01t.ncifcrf.gov:7738/hpc-server
 
 gov.nih.nci.hpc.ssl.cert=/opt/apache-servicemix-7.0.1/etc/hpc-server/keystore.jks
 gov.nih.nci.hpc.ssl.cert.password=< Configure Me >
@@ -12,7 +12,7 @@ hpc.serviceaccount=ncif-hpcdm-svc
 
 logging.file=hpcweb.log
 logging.level.org.hibernate=ERROR
-logging.level.org.springframework.web=DEBUG
+logging.level.org.springframework.web=ERROR
 logging.level.root=INFO
 
 server.port=${port:9080}
