--- a/src/hpc-web/src/main/resources/appconfigs/prod-env.conf
+++ b/src/hpc-web/src/main/resources/appconfigs/prod-env.conf
@@ -13,7 +13,7 @@ hpc.serviceaccount=ncifhpcdmsvcp
 
 logging.file=hpcweb.log
 logging.level.org.hibernate=ERROR
-logging.level.org.springframework.web=DEBUG
+logging.level.org.springframework.web=ERROR
 logging.level.root=INFO
 
 server.port=${port:9080}
