--- a/src/hpc-web/src/main/resources/appconfigs/dev-env.conf
+++ b/src/hpc-web/src/main/resources/appconfigs/dev-env.conf
@@ -2,7 +2,7 @@ app.env=DEV
 #gov.nih.nci.hpc.login.module=ldap
 #gov.nih.nci.hpc.login.module=hpc
 
-gov.nih.nci.hpc.server=https://fsdmel-dsapi01d.ncifcrf.gov:7738/hpc-server
+gov.nih.nci.hpc.server=https://fsdsgl-dmeap01d.ncifcrf.gov:7738/hpc-server
 
 gov.nih.nci.hpc.ssl.cert=/opt/apache-servicemix-7.0.1/etc/hpc-server/keystore.jks
 gov.nih.nci.hpc.ssl.cert.password=< Configure Me >
@@ -13,7 +13,7 @@ hpc.serviceaccount=ncif-hpcdm-svc
 
 logging.file=hpcweb.log
 logging.level.org.hibernate=ERROR
-logging.level.org.springframework.web=DEBUG
+logging.level.org.springframework.web=ERROR
 logging.level.root=INFO
 
 server.port=${port:9080}
