Updated location of logging file

--- a/src/hpc-web/src/main/resources/appconfigs/dev-env.conf
+++ b/src/hpc-web/src/main/resources/appconfigs/dev-env.conf
@@ -11,7 +11,7 @@ gov.nih.nci.hpc.web.server=https://fsdmel-dsapi01d.ncifcrf.gov
 
 hpc.serviceaccount=ncif-hpcdm-svc
 
-logging.file=hpcweb.log
+logging.file=/var/log/tomcat/hpcweb.log
 logging.level.org.hibernate=ERROR
 logging.level.org.springframework.web=ERROR
 logging.level.root=INFO
