--- a/src/hpc-web/src/main/resources/appconfigs/dev-env.conf
+++ b/src/hpc-web/src/main/resources/appconfigs/dev-env.conf
@@ -24,5 +24,7 @@ server.tomcat.basedir: target/tomcat
 # Allow Thymeleaf templates to be reloaded at dev time
 spring.thymeleaf.cache: false
 
+gov.nih.nci.hpc.asperaBucket=dummy
+
 gov.nih.nci.hpc.drive.clientid=< Configure Me >
 gov.nih.nci.hpc.drive.clientsecret=< Configure Me >
