--- a/src/hpc-web/src/main/resources/appconfigs/preprod-env.conf
+++ b/src/hpc-web/src/main/resources/appconfigs/preprod-env.conf
@@ -23,8 +23,8 @@ server.tomcat.basedir: target/tomcat
 # Allow Thymeleaf templates to be reloaded at dev time
 spring.thymeleaf.cache: false
 
+gov.nih.nci.hpc.asperaBucket=dummy
+
 gov.nih.nci.hpc.drive.clientid=< Configure Me >
 gov.nih.nci.hpc.drive.clientsecret=< Configure Me >
-
-gov.nih.nci.hpc.asperaBucket=< Configure Me >
 
