--- a/src/hpc-web/src/main/resources/appconfigs/prod-env.conf
+++ b/src/hpc-web/src/main/resources/appconfigs/prod-env.conf
@@ -24,7 +24,7 @@ server.tomcat.basedir: target/tomcat
 # Allow Thymeleaf templates to be reloaded at dev time
 spring.thymeleaf.cache: false
 
+gov.nih.nci.hpc.asperaBucket=protected
+
 gov.nih.nci.hpc.drive.clientid=< Configure Me >
 gov.nih.nci.hpc.drive.clientsecret=< Configure Me >
-
-gov.nih.nci.hpc.asperaBucket=< Configure Me >
