--- a/src/hpc-web/src/main/resources/appconfigs/dev-env.conf
+++ b/src/hpc-web/src/main/resources/appconfigs/dev-env.conf
@@ -7,7 +7,7 @@ gov.nih.nci.hpc.server=https://fsdsgl-dmeap01d.ncifcrf.gov:7738/hpc-server
 gov.nih.nci.hpc.ssl.cert=/opt/apache-servicemix-7.0.1/etc/hpc-server/keystore.jks
 gov.nih.nci.hpc.ssl.cert.password=< Configure Me >
 
-gov.nih.nci.hpc.web.server=https://fsdmel-dsapi01d.ncifcrf.gov
+gov.nih.nci.hpc.web.server=https://fsdsgl-dmeap01d.ncifcrf.gov
 
 hpc.serviceaccount=ncif-hpcdm-svc
 
