Updated hpcweb.log path

--- a/src/hpc-web/src/main/resources/appconfigs/preprod-env.conf
+++ b/src/hpc-web/src/main/resources/appconfigs/preprod-env.conf
@@ -10,7 +10,7 @@ gov.nih.nci.hpc.web.server=https://fsdmel-dsapi01t.ncifcrf.gov
 
 hpc.serviceaccount=ncif-hpcdm-svc
 
-logging.file=hpcweb.log
+logging.file=/var/lib/tomcat/hpcweb.log
 logging.level.org.hibernate=ERROR
 logging.level.org.springframework.web=ERROR
 logging.level.root=INFO
