--- a/src/hpc-server/hpc-ws-rs-impl/src/main/resources/WEB-INF/spring/hpc-server-local.properties
+++ b/src/hpc-server/hpc-ws-rs-impl/src/main/resources/WEB-INF/spring/hpc-server-local.properties
@@ -152,6 +152,8 @@ hpc.service.dataTransfer.maxSyncDownloadFileSize=5368709120
 hpc.service.dataTransfer.maxDeepArchiveInProgressDays=2
 hpc.service.dataTransfer.maxPermittedS3DownloadsForGlobus=7
 hpc.service.dataTransfer.globusTokenExpirationPeriod=120
+hpc.service.dataTransfer.maxPermittedTotalDownloadsSizePerUser=1000
+
 hpc.service.dataTransfer.globusCollectionDownloadBunching=true
 hpc.service.security.authenticationTokenSignatureKey=hpc-token-signature-key
 hpc.service.security.authenticationTokenExpirationPeriod=2160
@@ -188,7 +190,7 @@ hpc.service.serverId=server-id
 #############################################################################
 
 # iRODS.
-hpc.integration.irods.host=fsdmel-irods01d.ncifcrf.gov
+hpc.integration.irods.host=fsdsgl-irods01d.ncifcrf.gov
 hpc.integration.irods.port=1247
 hpc.integration.irods.zone=tempZone
 hpc.integration.irods.resource=demoResc
@@ -197,6 +199,7 @@ hpc.integration.irods.key=< Configure Me >
 hpc.integration.irods.algorithm=MD5
 hpc.integration.irods.pamAuthentication=false
 hpc.integration.irods.maxFilesAndDirsQueryMax=1000
+hpc.integration.irods.maxIdlePerKey=-1
 
 # Globus.
 hpc.integration.globus.globusAuthScope=urn:globus:auth:scope:transfer.api.globus.org:all
@@ -240,6 +243,12 @@ hpc.integration.googledrive.chunkSize=5242880
 # Google Cloud
 hpc.integration.googlecloudstorage.downloadExecutorThreadPoolSize=8
 
+# Aspera
+hpc.integration.aspera.downloadExecutorThreadPoolSize=8
+hpc.integration.aspera.ascp=/Users/rosenbergea/Development/tools/aspera-connect/ascp
+hpc.integration.aspera.privateKeyFile=/Users/rosenbergea/Development/tools/aspera-connect/aspera_tokenauth_id_rsa
+		  
+
 # SPS
 hpc.integration.sps.URL=https://authproxyint.nih.gov/authazws/AuthRestService/authz/
 hpc.integration.sps.resource=authproxyint.nih.gov/nihuser
@@ -251,7 +260,7 @@ hpc.integration.sps.domain=NIH
 # DAO Properties.
 #############################################################################
 
-hpc.dao.oracle.dbName=icat
+hpc.dao.oracle.dbName=icatdev
 hpc.dao.oracle.host=fsitgl-oradb02t.ncifcrf.gov
 hpc.dao.oracle.port=1521
 hpc.dao.oracle.username=irods
