--- a/src/hpc-server/pom.xml
+++ b/src/hpc-server/pom.xml
@@ -35,7 +35,7 @@
 		<oracle.version>19.7.0.0</oracle.version>
 		<slf4j.version>2.0.9</slf4j.version>
 		<logback.version>1.3.14</logback.version>
-		<spring.version>3.2.18.RELEASE</spring.version>
+		<spring.version>5.2.9.RELEASE</spring.version>
 		<spring.retry.version>1.3.0</spring.retry.version>
         <spring.security.version>4.2.10.RELEASE</spring.security.version>
         <aspectj.version>1.9.6</aspectj.version>
@@ -117,8 +117,8 @@
 					<artifactId>maven-compiler-plugin</artifactId>
 					<version>3.10.1</version>
 					<configuration>
-						<source>1.8</source>
-						<target>1.8</target>
+						<source>11</source>
+						<target>11</target>
 					</configuration>
 				</plugin>
 				<plugin>
@@ -450,6 +450,16 @@
 			    <artifactId>poi</artifactId>
 			    <version>${poi.version}</version>
 		    </dependency> 
+		    <dependency>
+			  <groupId>javax.xml.bind</groupId>
+			  <artifactId>jaxb-api</artifactId>
+			  <version>2.3.1</version>
+			</dependency>
+			<dependency>
+			  <groupId>org.glassfish.jaxb</groupId>
+			  <artifactId>jaxb-runtime</artifactId>
+			  <version>2.3.1</version>
+			</dependency>
 		</dependencies>
 	</dependencyManagement>
 	<repositories>
