--- a/src/hpc-web/pom.xml
+++ b/src/hpc-web/pom.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project
-    xmlns="http://maven.apache.org/POM/4.0.0"
-    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    xmlns="https://maven.apache.org/POM/4.0.0"
+    xmlns:xsi="https://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="https://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>gov.nih.nci.hpc</groupId>
     <artifactId>hpc-web</artifactId>
@@ -12,7 +12,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>1.5.22.RELEASE</version>
+        <version>2.3.0.RELEASE</version>
         <relativePath />
         <!-- lookup parent from repository -->
     </parent>
@@ -20,7 +20,7 @@
 		<api.version>2.39.0</api.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <start-class>gov.nih.nci.hpc.web.HpcWebApplication</start-class>
-        <java.version>1.8</java.version>
+        <java.version>11</java.version>
         <resources.basedir>src/main/resources</resources.basedir>
         <app.configs.dir>${resources.basedir}/appconfigs</app.configs.dir>
         <google-drive-sdk.version>1.25.0</google-drive-sdk.version>
@@ -30,15 +30,25 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-thymeleaf</artifactId>
+            <exclusions>                                  
+            	<exclusion>                                     
+            		<groupId>org.apache.logging.log4j</groupId>         
+            		<artifactId>log4j-to-slf4j</artifactId>             
+            	</exclusion>
+            	<exclusion>                                     
+                	<groupId>ch.qos.logback</groupId>               
+                	<artifactId>logback-classic</artifactId>     
+            	</exclusion>
+        	</exclusions>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.hibernate</groupId>
+            <groupId>org.hibernate.validator</groupId>
             <artifactId>hibernate-validator</artifactId>
-        </dependency>
+            </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
@@ -55,7 +65,6 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-devtools</artifactId>
-            <!-- <version>1.5.10.RELEASE</version> -->
             <optional>true</optional>
         </dependency>
         <dependency>
@@ -135,10 +144,9 @@
         <dependency>
             <groupId>org.apache.httpcomponents</groupId>
             <artifactId>httpclient</artifactId>
-            <version>4.5.13</version>
-        </dependency>
+            </dependency>
         <dependency>
-            <groupId>org.apache.commons</groupId>
+            <groupId>commons-io</groupId>
             <artifactId>commons-io</artifactId>
             <version>1.3.2</version>
         </dependency>
@@ -220,7 +228,7 @@
             </plugin>
             <plugin>
                 <artifactId>maven-antrun-plugin</artifactId>
-                <version>1.8</version>
+                
 		<executions>
 		  <execution>
 		    <id>gen-app-props</id>
