--- a/.gitignore
+++ b/.gitignore
@@ -144,3 +144,13 @@ src/hpc-server/hpc-scheduler-migration/target/classes/META-INF/spring/hpc-schedu
 src/hpc-server/hpc-scheduler-migration/target/classes/META-INF/spring/hpc-scheduler-migration-bundle-context-osgi.xml
 src/hpc-server/hpc-app-service-impl/src/test/java/META-INF/MANIFEST.MF
 src/hpc-server/hpc-scheduler-migration/.settings/org.eclipse.pde.core.prefs
+utils/hpc-client/lib/activation-1.1.1.jar
+utils/hpc-client/lib/geronimo-jta_1.1_spec-1.1.1.jar
+utils/hpc-client/lib/geronimo-ws-metadata_2.0_spec-1.1.3.jar
+utils/hpc-client/lib/jacorb-omgapi-3.9.jar
+utils/hpc-client/lib/javax.activation-1.2.0.jar
+utils/hpc-client/lib/javax.xml.soap-api-1.4.0.jar
+utils/hpc-client/lib/jaxws-api-2.3.1.jar
+utils/hpc-client/lib/jboss-rmi-api_1.0_spec-1.0.6.Final.jar
+utils/hpc-client/lib/mimepull-1.9.7.jar
+utils/hpc-client/lib/saaj-impl-1.4.0-b03.jar
