--- a/src/hpc-server/pom.xml
+++ b/src/hpc-server/pom.xml
@@ -122,6 +122,11 @@
 					</configuration>
 				</plugin>
 				<plugin>
+           			<groupId>org.apache.maven.plugins</groupId>
+            		<artifactId>maven-war-plugin</artifactId>
+           			<version>3.4.0</version>
+        		</plugin>
+				<plugin>
 					<groupId>org.codehaus.mojo</groupId>
 					<artifactId>keytool-maven-plugin</artifactId>
 					<version>1.5</version>
