HPCDATAMGM-1848 - completed the scheduler migration to tomcat.

--- a/src/hpc-server/hpc-scheduler/src/main/resources/WEB-INF/spring/hpc-scheduler.properties
+++ b/src/hpc-server/hpc-scheduler/src/main/resources/WEB-INF/spring/hpc-scheduler.properties
@@ -278,33 +278,38 @@ hpc.integration.irods.basePath=/tempZone/home
 hpc.scheduler.cron.summaryreport.delay=0 0 23 1/1 * ?
 hpc.scheduler.cron.weeklysummaryreport.delay=0 23 * * 7 ?
 hpc.scheduler.cron.processevents.delay=10 0/1 * * * ?
-hpc.scheduler.cron.processevents.delay=0 0 0 29 2 ?
 hpc.scheduler.cron.processDataTranferUploadReceived.delay=5 0/1 * * * ?
 hpc.scheduler.cron.processDataTranferUploadInProgress.delay=10 0/1 * * * ?
 hpc.scheduler.cron.processDataTranferUploadInProgressWithGeneratedURL.delay=15 0/1 * * * ?
-hpc.scheduler.cron.processDataTranferUploadInProgressWithGeneratedURL.delay=0 0 0 29 2 ?
-hpc.scheduler.cron.processDataTranferUploadStreamingInProgress.delay=11 0/1 * * * ?
 hpc.scheduler.cron.processDataTranferUploadStreamingStopped.delay=17 0/1 * * * ?
+hpc.scheduler.cron.processDataTranferUploadStreamingInProgress.delay=11 0/1 * * * ?
 hpc.scheduler.cron.processTemporaryArchive.delay=25 0/1 * * * ?
 hpc.scheduler.cron.processFileSystemUpload.delay=28 0/1 * * * ?
 hpc.scheduler.cron.completeInProgressDataObjectDownloadTasks.delay=35 0/1 * * * ?
 hpc.scheduler.cron.completeCanceledDataObjectDownloadTasks.delay=35 0/1 * * * ?
-hpc.scheduler.cron.startGlobusDataObjectDownloadTasks.delay=0 0 0 29 2 ?
 hpc.scheduler.cron.startGlobusDataObjectDownloadTasks.delay=35 0/1 * * * ?
-hpc.scheduler.cron.startS3DataObjectDownloadTasks.delay=0 0 0 29 2 ?
+hpc.scheduler.cron.stageHyperfileGlobusDataObjectDownloadTasks.delay=35 0/1 * * * ?
 hpc.scheduler.cron.startS3DataObjectDownloadTasks.delay=50 0/1 * * * ?
-hpc.scheduler.cron.startGoogleDriveDataObjectDownloadTasks.delay=0 0 0 29 2 ?
 hpc.scheduler.cron.startGoogleDriveDataObjectDownloadTasks.delay=30 0/1 * * * ?
-hpc.scheduler.cron.startGoogleCloudDataObjectDownloadTasks.delay=0 0 0 29 2 ?
-hpc.scheduler.cron.startGoogleCloudDataObjectDownloadTasks.delay=30 0/1 * * * ?
-hpc.scheduler.cron.processCollectionDownloadTasks.delay=0 0 0 29 2 ?
+hpc.scheduler.cron.startGoogleCloudStorageDataObjectDownloadTasks.delay=39 0/1 * * * ?
+hpc.scheduler.cron.startAsperaDataObjectDownloadTasks.delay=44 0/1 * * * ?
 hpc.scheduler.cron.processCollectionDownloadTasks.delay=50 0/1 * * * ?
 hpc.scheduler.cron.processBulkDataObjectRegistrationTasks.delay=45 0/1 * * * ?
-hpc.scheduler.cron.processBulkDataObjectRegistrationTasks.delay=0/20 * * * * ?
 hpc.scheduler.cron.completeBulkDataObjectRegistrationTasks.delay=35 0/1 * * * ?
 hpc.scheduler.cron.completeCollectionDownloadTasks.delay=55 0/1 * * * ?
+hpc.scheduler.cron.completeGlobusBunchingCollectionDownloadTasks.delay=47 0/1 * * * ?
 hpc.scheduler.cron.refreshHourlyViews.delay=0 0/60 * * * ?
 hpc.scheduler.cron.refreshDailyViews.delay=0 0 6 * * *
 hpc.scheduler.cron.sendWeeklyUserQueryResults.delay=0 0/15 * * * ?
 hpc.scheduler.cron.sendMonthlyUserQueryResults.delay=0 0/15 * * * ?
 hpc.scheduler.cron.recoverStorage.delay=35 0/1 * * * ?
+hpc.scheduler.cron.processDataTranferUploadStreamingFailed.delay=21 0/1 * * * ?
+hpc.scheduler.cron.processDataTranferUploadFileSystemReady.delay=28 0/1 * * * ?
+hpc.scheduler.cron.completeRestoreRequest.delay=25 0/1 * * * ?
+hpc.scheduler.cron.sendAnnualReview.delay=0 0 23 1 * ?
+hpc.scheduler.cron.sendAnnualReviewReminder.delay=0 0 23 15 * ?
+hpc.scheduler.cron.removeDeletedDataObjects.delay=0 0 * * * ?
+hpc.scheduler.cron.sendWeeklyUserQueryResults.delay=0 0 0 * * 4
+hpc.scheduler.cron.sendMonthlyUserQueryResults.delay=0 0 0 1 * ?
+hpc.scheduler.cron.completeDeepArchiveInProgress.delay=15 0/1 * * * ?
+
