--- a/src/hpc-server/hpc-scheduler-migration/pom.xml
+++ b/src/hpc-server/hpc-scheduler-migration/pom.xml
@@ -21,14 +21,33 @@
 		<version>2.39.0</version>
 	</parent>
 	<artifactId>hpc-scheduler-migration</artifactId>
-	<packaging>jar</packaging>
+	<packaging>war</packaging>
 	
+	<build>
+	    <plugins>
+	        <plugin>
+	            <groupId>org.apache.maven.plugins</groupId>
+	            <artifactId>maven-war-plugin</artifactId>
+	            <configuration>
+					<failOnMissingWebXml>false</failOnMissingWebXml>
+					<webResources>
+	                    <resource>
+	                        <directory>src/main/resources</directory>
+	                    </resource>
+	                </webResources>
+	                <warName>hpc-scheduler-migration</warName>
+	                <attachClasses>true</attachClasses>
+	           	</configuration>
+	        </plugin>
+	    </plugins>
+    </build>
+        
 	<dependencies>
 		<dependency>
-			<groupId>${project.groupId}</groupId>
-			<artifactId>hpc-bus-service-api</artifactId>
-			<version>${project.version}</version>
-		</dependency>
+      		<groupId>${project.groupId}</groupId>
+      		<artifactId>hpc-bus-service-impl</artifactId>
+     		<version>${project.version}</version>
+   		</dependency>
 		<dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-api</artifactId>
@@ -41,5 +60,17 @@
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-context</artifactId>
 		</dependency>
+		<dependency> 
+	  		<groupId>ch.qos.logback</groupId>
+	  		<artifactId>logback-classic</artifactId>
+		</dependency>
+		<dependency>
+      		<groupId>org.springframework</groupId>
+      		<artifactId>spring-web</artifactId>
+      	</dependency>
+    	<dependency>
+      		<groupId>org.springframework.security</groupId>
+      		<artifactId>spring-security-web</artifactId>
+    	</dependency>
 	</dependencies>
 </project>
