--- a/src/hpc-server/hpc-scheduler-migration/src/main/resources/WEB-INF/spring/hpc-scheduler-migration.properties
+++ b/src/hpc-server/hpc-scheduler-migration/src/main/resources/WEB-INF/spring/hpc-scheduler-migration.properties
@@ -162,7 +162,8 @@ hpc.service.security.dataManagementAccountExpirationPeriod=480
 hpc.service.systemAccount.aws.secretName=< Configure Me >
 hpc.service.systemAccount.aws.region=us-east-1
 hpc.service.systemAccount.aws.useSecretsManager=false
-hpc.service.notification.formatsPath=notificationFormats.json
+hpc.service.notification.formatsPath=classpath:notificationFormats.json
+#hpc.service.notification.formatsPath=file:<path to notificationFormats.json under Tomcat config>
 hpc.service.notification.mail.host=mailfwd.nih.gov
 hpc.service.notification.mail.port=25
 hpc.service.notification.notificationDeliveryReceiptsPageSize=100
