--- a/src/hpc-cli/pom.xml
+++ b/src/hpc-cli/pom.xml
@@ -195,6 +195,12 @@
    			<groupId>org.apache.tika</groupId>
     		<artifactId>tika-parsers</artifactId>
     		<version>1.24.1</version>
+    		<exclusions>
+				<exclusion>
+					<artifactId>xml-apis</artifactId>
+					<groupId>xml-apis</groupId>
+				</exclusion>
+			</exclusions>
 		</dependency>
 		<dependency>
 		    <groupId>ch.qos.logback</groupId>
@@ -213,8 +219,8 @@
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>3.11.0</version><!--$NO-MVN-MAN-VER$-->
 				<configuration>
-					<source>1.8</source>
-					<target>1.8</target>
+					<source>11</source>
+					<target>11</target>
 
 				</configuration>
 			</plugin>
