--- a/src/hpc-web/src/main/resources/appconfigs/local-env.conf
+++ b/src/hpc-web/src/main/resources/appconfigs/local-env.conf
@@ -3,8 +3,8 @@ gov.nih.nci.hpc.login.module=ldap
 #gov.nih.nci.hpc.login.module=hpc
 
 #gov.nih.nci.hpc.server=https://localhost:7738/hpc-server
-gov.nih.nci.hpc.server=https://fsdsgl-dmeap01d.ncifcrf.gov:7738/hpc-server
-#gov.nih.nci.hpc.server=https://fsdsgl-dmeap01t.ncifcrf.gov:7738/hpc-server
+#gov.nih.nci.hpc.server=https://fsdsgl-dmeap01d.ncifcrf.gov:7738/hpc-server
+gov.nih.nci.hpc.server=https://fsdsgl-dmeap01t.ncifcrf.gov:7738/hpc-server
 #gov.nih.nci.hpc.server=https://hpcdmeapi.nci.nih.gov:8080
 
 gov.nih.nci.hpc.ssl.cert=c:\\DEV\\temp\\DEV\\keystore.jks
