updating for testing

--- a/src/hpc-server/hpc-ws-rs-impl/src/main/resources/WEB-INF/spring/hpc-server.properties
+++ b/src/hpc-server/hpc-ws-rs-impl/src/main/resources/WEB-INF/spring/hpc-server.properties
@@ -251,8 +251,8 @@ hpc.integration.aspera.privateKeyFile=/Users/rosenbergea/Development/tools/asper
 		  
 
 # SPS
-hpc.integration.sps.URL=https://authproxyint.nih.gov/authazws/AuthRestService/authz/
-hpc.integration.sps.resource=authproxyint.nih.gov/nihuser
+hpc.integration.sps.URL=https://authproxyintdev.nih.gov/authazws/AuthRestService/authz/
+hpc.integration.sps.resource=authproxyintdev.nih.gov/nihuser
 hpc.integration.sps.domain=NIH
 
    
