--- a/.gitignore
+++ b/.gitignore
@@ -161,3 +161,5 @@ src/hpc-server/hpc-scheduler-migration/.settings/org.eclipse.wst.common.project.
 src/hpc-server/hpc-scheduler-migration/.settings/org.eclipse.wst.jsdt.ui.superType.container
 src/hpc-server/hpc-scheduler-migration/.settings/org.eclipse.wst.jsdt.ui.superType.name
 src/hpc-server/hpc-scheduler-migration/.settings/org.eclipse.wst.validation.prefs
+utils/hpc-client/lib/jakarta.activation-api-1.2.2.jar
+utils/hpc-client/lib/jakarta.xml.bind-api-2.3.3.jar
