--- a/src/hpc-web/src/main/resources/appconfigs/dev-env.conf
+++ b/src/hpc-web/src/main/resources/appconfigs/dev-env.conf
@@ -1,5 +1,5 @@
 app.env=DEV
-#gov.nih.nci.hpc.login.module=ldap
+gov.nih.nci.hpc.login.module=ldap
 #gov.nih.nci.hpc.login.module=hpc
 
 gov.nih.nci.hpc.server=https://fsdsgl-dmeap01d.ncifcrf.gov:7738/hpc-server
