--- a/.gitignore
+++ b/.gitignore
@@ -167,3 +167,27 @@ src/hpc-web/.settings/org.eclipse.wst.common.project.facet.core.xml
 src/hpc-web/.settings/org.eclipse.wst.jsdt.ui.superType.container
 src/hpc-web/.settings/org.eclipse.wst.jsdt.ui.superType.name
 src/hpc-web/.settings/org.eclipse.wst.validation.prefs
+utils/hpc-client/lib/cxf-rt-frontend-jaxrs-3.1.9.jar
+utils/hpc-client/lib/cxf-rt-rs-client-3.1.9.jar
+utils/hpc-client/lib/cxf-rt-transports-http-3.1.9.jar
+utils/hpc-client/lib/jakarta.activation-api-1.2.2.jar
+utils/hpc-client/lib/jakarta.xml.bind-api-2.3.3.jar
+utils/hpc-client/lib/javax.ws.rs-api-2.0.jar
+utils/hpc-client/lib/jaxws-api-2.3.0.jar
+utils/hpc-client/lib/reactive-streams-1.0.3.jar
+utils/hpc-client/lib/reactor-core-3.3.13.RELEASE.jar
+utils/hpc-client/lib/slf4j-api-1.7.36.jar
+utils/hpc-client/lib/spring-aop-5.2.25.RELEASE.jar
+utils/hpc-client/lib/spring-beans-5.2.25.RELEASE.jar
+utils/hpc-client/lib/spring-context-5.2.25.RELEASE.jar
+utils/hpc-client/lib/spring-core-5.2.25.RELEASE.jar
+utils/hpc-client/lib/spring-expression-5.2.25.RELEASE.jar
+utils/hpc-client/lib/spring-integration-core-5.2.11.RELEASE.jar
+utils/hpc-client/lib/spring-integration-http-5.2.11.RELEASE.jar
+utils/hpc-client/lib/spring-jcl-5.2.25.RELEASE.jar
+utils/hpc-client/lib/spring-messaging-5.2.12.RELEASE.jar
+utils/hpc-client/lib/spring-retry-1.2.5.RELEASE.jar
+utils/hpc-client/lib/spring-tx-5.2.12.RELEASE.jar
+utils/hpc-client/lib/spring-web-5.2.25.RELEASE.jar
+utils/hpc-client/lib/spring-webmvc-5.2.25.RELEASE.jar
+utils/hpc-client/lib/xmlschema-core-2.2.1.jar
