--- a/src/hpc-server/hpc-app-service-impl/pom.xml
+++ b/src/hpc-server/hpc-app-service-impl/pom.xml
@@ -91,6 +91,10 @@
 			<artifactId>javax.mail-api</artifactId>
 		</dependency>
 		<dependency>
+    		<groupId>javax.mail</groupId>
+    		<artifactId>mail</artifactId>
+		</dependency>
+		<dependency>
 			<groupId>org.mockito</groupId>
 			<artifactId>mockito-all</artifactId>
 			<scope>test</scope>
