--- a/src/hpc-server/pom.xml
+++ b/src/hpc-server/pom.xml
@@ -401,6 +401,11 @@
 				<version>1.4.7</version>
 			</dependency>
 			<dependency>
+    			<groupId>javax.mail</groupId>
+    			<artifactId>mail</artifactId>
+    			<version>1.4.7</version>
+			</dependency>
+			<dependency>
 				<groupId>org.mockito</groupId>
 				<artifactId>mockito-all</artifactId>
 				<version>1.10.19</version>
