Adding version numbers to the war files.

--- a/src/hpc-server/hpc-ws-rs-impl/pom.xml
+++ b/src/hpc-server/hpc-ws-rs-impl/pom.xml
@@ -71,7 +71,7 @@
                         <directory>src/main/resources</directory>
                     </resource>
                 </webResources>
-                <warName>hpc-server</warName>
+                <warName>hpc-server##${project.version}</warName>
                 <attachClasses>true</attachClasses>
            	</configuration>
         </plugin>
