--- a/src/hpc-web/pom.xml
+++ b/src/hpc-web/pom.xml
@@ -188,6 +188,7 @@
 		</dependency>
     </dependencies>
     <build>
+		<finalName>${project.artifactId}##${project.version}</finalName>
         <plugins>
             <plugin>
                 <artifactId>maven-compiler-plugin</artifactId>
