Updating to new server names

--- a/src/hpc-web/src/main/resources/appconfigs/local-env.conf
+++ b/src/hpc-web/src/main/resources/appconfigs/local-env.conf
@@ -11,8 +11,8 @@ gov.nih.nci.hpc.ssl.cert=c:\\DEV\\temp\\DEV\\keystore.jks
 gov.nih.nci.hpc.ssl.cert.password=< Configure Me >
 
 gov.nih.nci.hpc.web.server=http://localhost:9080
-#gov.nih.nci.hpc.web.server=https://fsdsgl-dmeap01d.ncifcrf.gov
-#gov.nih.nci.hpc.web.server=https://fsdmel-dsapi01t.ncifcrf.gov
+#gov.nih.nci.hpc.web.server=https://fsdsgl-dmeap02d.ncifcrf.gov
+#gov.nih.nci.hpc.web.server=https://fsdsgl-dmeap01t.ncifcrf.gov
 #gov.nih.nci.hpc.web.server=https://hpcdmeweb.nci.nih.gov
 
 hpc.serviceaccount=ncif-hpcdm-svc
