--- a/src/hpc-server/hpc-scheduler-migration/pom.xml
+++ b/src/hpc-server/hpc-scheduler-migration/pom.xml
@@ -35,7 +35,7 @@
 	                        <directory>src/main/resources</directory>
 	                    </resource>
 	                </webResources>
-	                <warName>${project.artifactId}##${project.version}</warName>
+	                <warName>${project.artifactId}-${project.version}</warName>
 	                <attachClasses>true</attachClasses>
 	           	</configuration>
 	        </plugin>
