HPCDATAMGM-1421 - initial commit to test Box single file download to Box in DEV

--- a/src/hpc-server/hpc-integration-impl/pom.xml
+++ b/src/hpc-server/hpc-integration-impl/pom.xml
@@ -134,5 +134,9 @@
     		<groupId>com.google.auth</groupId>
     		<artifactId>google-auth-library-oauth2-http</artifactId>
 		</dependency>
+		<dependency>
+		    <groupId>com.box</groupId>
+		    <artifactId>box-java-sdk</artifactId>
+		</dependency>
 	</dependencies>
 </project>
