--- a/src/hpc-server/hpc-ws-rs-impl/src/main/resources/WEB-INF/spring/hpc-server.properties
+++ b/src/hpc-server/hpc-ws-rs-impl/src/main/resources/WEB-INF/spring/hpc-server.properties
@@ -249,6 +249,9 @@ hpc.integration.aspera.downloadExecutorThreadPoolSize=8
 hpc.integration.aspera.ascp=/Users/rosenbergea/Development/tools/aspera-connect/ascp
 hpc.integration.aspera.privateKeyFile=/Users/rosenbergea/Development/tools/aspera-connect/aspera_tokenauth_id_rsa	  
 
+# Box
+hpc.integration.box.downloadExecutorThreadPoolSize=8
+
 # SPS
 hpc.integration.sps.URL=https://authproxyintdev.nih.gov/authazws/AuthRestService/authz/
 hpc.integration.sps.resource=authproxyintdev.nih.gov/nihuser
