--- a/src/hpc-server/pom.xml
+++ b/src/hpc-server/pom.xml
@@ -52,6 +52,7 @@
 		<google-api-client.version>1.32.1</google-api-client.version>
 		<google-http-client.version>1.39.2</google-http-client.version>
 		<poi.version>4.1.1</poi.version>
+		<box.version>4.8.0</box.version>
 	</properties>
 
 	<modules>
@@ -70,7 +71,6 @@
 		<module>hpc-ws-rs-api</module>
 		<module>hpc-ws-rs-impl</module>
 		<module>hpc-ws-rs-test</module>
-		<module>hpc-features</module>
 		<module>hpc-client</module>
 	</modules>
 
@@ -229,11 +229,6 @@
 				<version>${cxf.version}</version>
 			</dependency>
 			<dependency>
-				<groupId>org.apache.cxf</groupId>
-				<artifactId>cxf-rt-rs-extension-providers</artifactId>
-				<version>${cxf.version}</version>
-			</dependency>
-			<dependency>
 				<groupId>org.codehaus.jettison</groupId>
 				<artifactId>jettison</artifactId>
 				<version>1.5.4</version>
@@ -304,9 +299,9 @@
 			    <version>${spring.retry.version}</version>
 			</dependency>
 			<dependency>
-    				<groupId>org.mockito</groupId>
-    				<artifactId>mockito-core</artifactId>
-    				<version>1.10.19</version>
+				<groupId>org.mockito</groupId>
+				<artifactId>mockito-core</artifactId>
+				<version>1.10.19</version>
 			</dependency>
 			<dependency>
 				<groupId>com.amazonaws</groupId>
@@ -464,6 +459,11 @@
 			  <groupId>org.glassfish.jaxb</groupId>
 			  <artifactId>jaxb-runtime</artifactId>
 			  <version>2.3.1</version>
+			</dependency>
+			<dependency>
+			    <groupId>com.box</groupId>
+			    <artifactId>box-java-sdk</artifactId>
+			    <version>${box.version}</version>
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
