HPCDATAMGM-1916: Reinstate hpcweb.log file for hpc-web

--- a/src/hpc-web/src/main/resources/appconfigs/local-env.conf
+++ b/src/hpc-web/src/main/resources/appconfigs/local-env.conf
@@ -17,7 +17,8 @@ gov.nih.nci.hpc.web.server=http://localhost:9080
 
 hpc.serviceaccount=ncif-hpcdm-svc
 
-logging.file=hpcweb.log
+logging.config=classpath:logback-spring.xml
+logging.file.name=hpcweb.log
 logging.level.org.hibernate=ERROR
 logging.level.org.springframework.web=ERROR
 logging.level.root=INFO
