--- a/src/hpc-web/src/main/resources/appconfigs/dev-env.conf
+++ b/src/hpc-web/src/main/resources/appconfigs/dev-env.conf
@@ -11,7 +11,8 @@ gov.nih.nci.hpc.web.server=https://fsdsgl-dmeap02d.ncifcrf.gov
 
 hpc.serviceaccount=ncif-hpcdm-svc
 
-logging.file=/var/log/tomcat/hpcweb.log
+logging.config=classpath:logback-spring.xml
+logging.file.name=/var/log/tomcat/hpcweb.log
 logging.level.org.hibernate=ERROR
 logging.level.org.springframework.web=ERROR
 logging.level.root=INFO
