--- a/src/hpc-web/src/main/resources/appconfigs/preprod-env.conf
+++ b/src/hpc-web/src/main/resources/appconfigs/preprod-env.conf
@@ -10,7 +10,8 @@ gov.nih.nci.hpc.web.server=https://fsdsgl-dmeap01t.ncifcrf.gov
 
 hpc.serviceaccount=ncif-hpcdm-svc
 
-logging.file=/var/log/tomcat/hpcweb.log
+logging.config=classpath:logback-spring.xml
+logging.file.name=/var/log/tomcat/hpcweb.log
 logging.level.org.hibernate=ERROR
 logging.level.org.springframework.web=ERROR
 logging.level.root=INFO
