--- a/src/hpc-web/src/main/resources/appconfigs/prod-env.conf
+++ b/src/hpc-web/src/main/resources/appconfigs/prod-env.conf
@@ -11,7 +11,8 @@ gov.nih.nci.hpc.web.server=https://hpcdmeweb.nci.nih.gov
 
 hpc.serviceaccount=ncifhpcdmsvcp
 
-logging.file=/var/log/tomcat/hpcweb.log
+logging.config=classpath:logback-spring.xml
+logging.file.name=/var/log/tomcat/hpcweb.log
 logging.level.org.hibernate=ERROR
 logging.level.org.springframework.web=ERROR
 logging.level.root=INFO
