HPCDATAMGM-1916: Reinstate hpcweb.log file for hpc-web

--- a/src/hpc-web/src/main/resources/appconfigs/local-env.conf
+++ b/src/hpc-web/src/main/resources/appconfigs/local-env.conf
@@ -10,15 +10,14 @@ gov.nih.nci.hpc.server=https://fsdsgl-dmeap01t.ncifcrf.gov:7738/hpc-server
 gov.nih.nci.hpc.ssl.cert=c:\\DEV\\temp\\DEV\\keystore.jks
 gov.nih.nci.hpc.ssl.cert.password=< Configure Me >
 
-gov.nih.nci.hpc.web.server=http://localhost:9080
+#gov.nih.nci.hpc.web.server=http://localhost:9080
 #gov.nih.nci.hpc.web.server=https://fsdsgl-dmeap02d.ncifcrf.gov
-#gov.nih.nci.hpc.web.server=https://fsdsgl-dmeap01t.ncifcrf.gov
+gov.nih.nci.hpc.web.server=https://fsdsgl-dmeap01t.ncifcrf.gov
 #gov.nih.nci.hpc.web.server=https://hpcdmeweb.nci.nih.gov
 
 hpc.serviceaccount=ncif-hpcdm-svc
 
-logging.config=classpath:logback-spring.xml
-logging.file.name=hpcweb.log
+logging.file=hpcweb.log
 logging.level.org.hibernate=ERROR
 logging.level.org.springframework.web=ERROR
 logging.level.root=INFO
