--- a/src/hpc-web/src/main/resources/appconfigs/dev-env.conf
+++ b/src/hpc-web/src/main/resources/appconfigs/dev-env.conf
@@ -2,17 +2,16 @@ app.env=DEV
 gov.nih.nci.hpc.login.module=ldap
 #gov.nih.nci.hpc.login.module=hpc
 
-gov.nih.nci.hpc.server=https://fsdsgl-dmeap02d.ncifcrf.gov:7738/hpc-server
+gov.nih.nci.hpc.server=https://fsdsgl-dmeap01d.ncifcrf.gov:7738/hpc-server
 
 gov.nih.nci.hpc.ssl.cert=/opt/apache-servicemix-7.0.1/etc/hpc-server/keystore.jks
 gov.nih.nci.hpc.ssl.cert.password=< Configure Me >
 
-gov.nih.nci.hpc.web.server=https://fsdsgl-dmeap02d.ncifcrf.gov
+gov.nih.nci.hpc.web.server=https://fsdsgl-dmeap01d.ncifcrf.gov
 
 hpc.serviceaccount=ncif-hpcdm-svc
 
-logging.config=classpath:logback-spring.xml
-logging.file.name=/var/log/tomcat/hpcweb.log
+logging.file=/var/log/tomcat/hpcweb.log
 logging.level.org.hibernate=ERROR
 logging.level.org.springframework.web=ERROR
 logging.level.root=INFO
