HPCDATAMGM-1902: Add config files for export email API

--- a/src/hpc-server/hpc-ws-rs-impl/src/main/resources/WEB-INF/spring/hpc-server.properties
+++ b/src/hpc-server/hpc-ws-rs-impl/src/main/resources/WEB-INF/spring/hpc-server.properties
@@ -104,6 +104,7 @@ hpc.ws.rs.auth.data-search.get-queries=SYSTEM_ADMIN GROUP_ADMIN USER RESTRICTED 
 hpc.ws.rs.auth.data-search.query-catalog=SYSTEM_ADMIN GROUP_ADMIN USER RESTRICTED METADATA_ONLY
 hpc.ws.rs.auth.data-search.get-metadata-attributes=SYSTEM_ADMIN GROUP_ADMIN USER RESTRICTED METADATA_ONLY
 hpc.ws.rs.auth.data-search.refresh-metadata-views=SYSTEM_ADMIN
+hpc.ws.rs.auth.data-search.email-export=SYSTEM_ADMIN GROUP_ADMIN USER
 		
 hpc.ws.rs.auth.data-browse.add-bookmark=SYSTEM_ADMIN GROUP_ADMIN USER
 hpc.ws.rs.auth.data-browse.update-bookmark=SYSTEM_ADMIN GROUP_ADMIN USER
