src/main/resources/templates/dataobjectsearchresultdetail.html

--- a/src/hpc-web/src/main/resources/appconfigs/local-env.conf
+++ b/src/hpc-web/src/main/resources/appconfigs/local-env.conf
@@ -31,6 +31,7 @@ server.tomcat.basedir: target/tomcat
 spring.thymeleaf.cache: false
 
 gov.nih.nci.hpc.asperaBucket=dummy
+gov.nih.nci.hpc.fileExportRowsThreshold=10000
 
 gov.nih.nci.hpc.drive.clientid=< Configure Me >
 gov.nih.nci.hpc.drive.clientsecret=< Configure Me >
