Adding jcl-over-slf4j jar.

--- a/src/hpc-server/hpc-ws-rs-impl/pom.xml
+++ b/src/hpc-server/hpc-ws-rs-impl/pom.xml
@@ -363,6 +363,14 @@
       <artifactId>hpc-bus-service-impl</artifactId>
       <version>${project.version}</version>
     </dependency>
+    <dependency>
+        <groupId>org.slf4j</groupId>
+        <artifactId>slf4j-api</artifactId>
+    </dependency>
+    <dependency>
+	    <groupId>org.slf4j</groupId>
+	    <artifactId>jcl-over-slf4j</artifactId>
+	</dependency>
     <dependency> 
 	  <groupId>ch.qos.logback</groupId>
 	  <artifactId>logback-classic</artifactId>
