--- a/src/hpc-server/hpc-integration-impl/pom.xml
+++ b/src/hpc-server/hpc-integration-impl/pom.xml
@@ -93,6 +93,8 @@
 			<groupId>org.springframework.retry</groupId>
 			<artifactId>spring-retry</artifactId>
 		</dependency>
+		
+		<!-- TODO: Remove V1 jars -->
 		<dependency>
 			<groupId>com.amazonaws</groupId>
 			<artifactId>aws-java-sdk-s3</artifactId>
@@ -100,6 +102,16 @@
 		<dependency>
 		    <groupId>org.apache.cxf</groupId>
 		    <artifactId>cxf-rt-rs-client</artifactId>
+		</dependency>
+		<!-- TODO: Remove V1 jars -->
+		
+		<dependency>
+      		<groupId>software.amazon.awssdk</groupId>
+      		<artifactId>s3-transfer-manager</artifactId>
+   		</dependency>
+   		<dependency>
+    		<groupId>software.amazon.awssdk</groupId>
+    		<artifactId>auth</artifactId>
 		</dependency>
 		
 		<dependency>
