--- a/src/hpc-server/hpc-integration-impl/pom.xml
+++ b/src/hpc-server/hpc-integration-impl/pom.xml
@@ -113,6 +113,14 @@
     		<groupId>software.amazon.awssdk</groupId>
     		<artifactId>auth</artifactId>
 		</dependency>
+		<dependency>
+  			<groupId>software.amazon.awssdk</groupId>
+  			<artifactId>s3</artifactId>
+		</dependency>
+		<dependency>
+  			<groupId>software.amazon.awssdk.crt</groupId>
+  			<artifactId>aws-crt</artifactId>
+		</dependency>
 		
 		<dependency>
     		<groupId>com.google.apis</groupId>
