--- a/src/hpc-server/pom.xml
+++ b/src/hpc-server/pom.xml
@@ -41,6 +41,7 @@
         <aspectj.version>1.9.6</aspectj.version>
 		<amazon-aws.version>1.12.420</amazon-aws.version>
 		<amazon-aws-v2.version>2.25.60</amazon-aws-v2.version>
+		<amazon-aws-crt.version>0.29.19</amazon-aws-crt.version>
 		<jackson.version>2.12.7</jackson.version>
 		<jargon.version>4.3.3.0-RELEASE</jargon.version>
 		<jjwt.version>0.9.1</jjwt.version>
@@ -330,6 +331,11 @@
           		<type>pom</type>
           		<scope>import</scope>
         	</dependency>
+        	<dependency>
+    			<groupId>software.amazon.awssdk.crt</groupId>
+    			<artifactId>aws-crt</artifactId>
+   				<version>${amazon-aws-crt.version}</version>
+			</dependency>
 			<dependency>
 				<groupId>org.irods.jargon</groupId>
 				<artifactId>jargon-core</artifactId>
