HPCDATAMGM-1923: Replace SiteMinder with OAuth/OIDC

--- a/src/hpc-server/hpc-integration-impl/pom.xml
+++ b/src/hpc-server/hpc-integration-impl/pom.xml
@@ -138,5 +138,13 @@
 		    <groupId>com.box</groupId>
 		    <artifactId>box-java-sdk</artifactId>
 		</dependency>
+		<dependency>
+	       <groupId>com.fasterxml.jackson.jaxrs</groupId>
+	       <artifactId>jackson-jaxrs-json-provider</artifactId>
+	    </dependency>
+	    <dependency>
+			<groupId>com.googlecode.json-simple</groupId>
+			<artifactId>json-simple</artifactId>
+		</dependency>
 	</dependencies>
 </project>
