--- a/src/hpc-server/hpc-ws-rs-impl/src/main/resources/WEB-INF/spring/hpc-server.properties
+++ b/src/hpc-server/hpc-ws-rs-impl/src/main/resources/WEB-INF/spring/hpc-server.properties
@@ -258,6 +258,11 @@ hpc.integration.sps.URL=https://authproxyintdev.nih.gov/authazws/AuthRestService
 hpc.integration.sps.resource=authproxyintdev.nih.gov/nihuser
 hpc.integration.sps.domain=NIH
 
+# OIDC
+hpc.integration.oidc.URL=https://stsstg.nih.gov
+hpc.integration.oidc.jwks.endpoint=/openid/connect/jwks.json
+hpc.integration.oidc.userinfo.endpoint=/openid/connect/v1/userinfo
+hpc.integration.oidc.userinfo.attribute=userid
 
 #############################################################################
 # DAO Properties.
