HPCDATAMGM-1923: Replace SiteMinder with OAuth/OIDC

--- a/src/hpc-web/src/main/resources/appconfigs/dev-env.conf
+++ b/src/hpc-web/src/main/resources/appconfigs/dev-env.conf
@@ -26,6 +26,7 @@ spring.thymeleaf.cache: false
 
 gov.nih.nci.hpc.asperaBucket=dummy
 gov.nih.nci.hpc.fileExportRowsThreshold=10000
+gov.nih.nci.hpc.oidc.header=OIDC_access_token
 
 gov.nih.nci.hpc.drive.clientid=< Configure Me >
 gov.nih.nci.hpc.drive.clientsecret=< Configure Me >
