--- a/src/hpc-web/pom.xml
+++ b/src/hpc-web/pom.xml
@@ -158,7 +158,7 @@
 	    <dependency>
    			<groupId>com.google.apis</groupId>
    			<artifactId>google-api-services-drive</artifactId>
-   			<version>v3-rev197-${google-drive-sdk.version}</version>
+   			<version>v3-rev20240521-2.0.0</version>
 		</dependency>
 	    <dependency>
    			<groupId>com.google.api-client</groupId>
