--- a/src/hpc-server/hpc-integration-impl/pom.xml
+++ b/src/hpc-server/hpc-integration-impl/pom.xml
@@ -118,6 +118,10 @@
   			<artifactId>s3</artifactId>
 		</dependency>
 		<dependency>
+  			<groupId>software.amazon.awssdk</groupId>
+  			<artifactId>aws-core</artifactId>
+		</dependency>
+		<dependency>
   			<groupId>software.amazon.awssdk.crt</groupId>
   			<artifactId>aws-crt</artifactId>
 		</dependency>
