--- a/src/hpc-server/hpc-integration-impl/pom.xml
+++ b/src/hpc-server/hpc-integration-impl/pom.xml
@@ -34,6 +34,14 @@
 			<artifactId>slf4j-api</artifactId>
 		</dependency>
 		<dependency>
+			<groupId>org.bouncycastle</groupId>
+			<artifactId>bcpkix-jdk15on</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.bouncycastle</groupId>
+			<artifactId>bcprov-jdk15on</artifactId>
+		</dependency>
+		<dependency>
 			<groupId>org.globusonline</groupId>
 			<artifactId>TransferAPIClient</artifactId>
 		</dependency>
