--- a/src/hpc-web/src/main/resources/appconfigs/local-env.conf
+++ b/src/hpc-web/src/main/resources/appconfigs/local-env.conf
@@ -17,10 +17,7 @@ gov.nih.nci.hpc.web.server=https://fsdsgl-dmeap01t.ncifcrf.gov
 
 hpc.serviceaccount=ncif-hpcdm-svc
 
-logging.file=hpcweb.log
-logging.level.org.hibernate=ERROR
-logging.level.org.springframework.web=ERROR
-logging.level.root=INFO
+logging.config=classpath:logback-spring.xml
 
 server.port=${port:9080}
 
