--- a/src/hpc-web/src/main/resources/appconfigs/prod-env.conf
+++ b/src/hpc-web/src/main/resources/appconfigs/prod-env.conf
@@ -11,10 +11,7 @@ gov.nih.nci.hpc.web.server=https://hpcdmeweb.nci.nih.gov
 
 hpc.serviceaccount=ncifhpcdmsvcp
 
-logging.file=/var/log/tomcat/hpcweb.log
-logging.level.org.hibernate=ERROR
-logging.level.org.springframework.web=ERROR
-logging.level.root=INFO
+logging.config=classpath:logback-spring.xml
 
 server.port=${port:9080}
 
