Removing unused expiring cert.

--- a/src/hpc-server/hpc-ws-rs-impl/pom.xml
+++ b/src/hpc-server/hpc-ws-rs-impl/pom.xml
@@ -130,7 +130,7 @@
               <skipIfExist>false</skipIfExist>
             </configuration>
           </execution> -->
-          <execution>
+          <!--execution>
             <id>importIrodsCertificate</id>
             <goals>
               <goal>importCertificate</goal>
@@ -145,7 +145,7 @@
               <noprompt>true</noprompt>
               <skipIfExist>false</skipIfExist>
             </configuration>
-          </execution>
+          </execution-->
           <execution>
             <id>importLdapIntermediateCertificate</id>
             <goals>
