--- a/src/hpc-cli/pom.xml
+++ b/src/hpc-cli/pom.xml
@@ -25,7 +25,7 @@
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-core</artifactId>
-			<version>5.2.25.RELEASE</version>
+			<version>5.3.39</version>
 			<scope>compile</scope>
 			<exclusions>
 				<exclusion>
@@ -57,17 +57,17 @@
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-webmvc</artifactId>
-			<version>5.2.25.RELEASE</version>
+			<version>5.3.39</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-web</artifactId>
-			<version>5.2.25.RELEASE</version>
+			<version>5.3.39</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.integration</groupId>
 			<artifactId>spring-integration-http</artifactId>
-			<version>5.2.11.RELEASE</version>
+			<version>5.3.10.RELEASE</version>
 		</dependency>
 		<dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
@@ -219,8 +219,8 @@
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>3.11.0</version><!--$NO-MVN-MAN-VER$-->
 				<configuration>
-					<source>11</source>
-					<target>11</target>
+					<source>21</source>
+					<target>21</target>
 
 				</configuration>
 			</plugin>
