--- a/.gitignore
+++ b/.gitignore
@@ -806,3 +806,26 @@ src/hpc-server/hpc-scheduler/target/hpc-scheduler-3.7.0/WEB-INF/spring/hpc-sched
 src/hpc-server/hpc-scheduler/target/maven-archiver/pom.properties
 src/hpc-server/hpc-scheduler/target/maven-status/maven-compiler-plugin/compile/default-compile/createdFiles.lst
 src/hpc-server/hpc-scheduler/target/maven-status/maven-compiler-plugin/compile/default-compile/inputFiles.lst
+src/hpc-server/hpc-app-service-api/src/test/java/META-INF/MANIFEST.MF
+src/hpc-server/hpc-dao-impl/.settings/org.eclipse.m2e.core.prefs
+src/hpc-server/hpc-dao-impl/.settings/org.eclipse.wst.common.component
+src/hpc-server/hpc-dao-impl/.settings/org.eclipse.wst.common.project.facet.core.xml
+src/hpc-server/hpc-dao-impl/.settings/org.eclipse.wst.validation.prefs
+src/hpc-server/hpc-domain-types/.settings/org.eclipse.m2e.core.prefs
+src/hpc-server/hpc-domain-types/.settings/org.eclipse.wst.common.component
+src/hpc-server/hpc-domain-types/.settings/org.eclipse.wst.common.project.facet.core.xml
+src/hpc-server/hpc-domain-types/.settings/org.eclipse.wst.validation.prefs
+src/hpc-server/hpc-dto/src/test/resources/META-INF/MANIFEST.MF
+src/hpc-server/hpc-integration-api/.settings/org.eclipse.m2e.core.prefs
+src/hpc-server/hpc-integration-api/.settings/org.eclipse.wst.common.component
+src/hpc-server/hpc-integration-api/.settings/org.eclipse.wst.common.project.facet.core.xml
+src/hpc-server/hpc-integration-api/.settings/org.eclipse.wst.validation.prefs
+src/hpc-server/hpc-scheduler-migration/.settings/org.eclipse.m2e.core.prefs
+src/hpc-server/hpc-scheduler/.settings/.jsdtscope
+src/hpc-server/hpc-scheduler/.settings/org.eclipse.m2e.core.prefs
+src/hpc-server/hpc-scheduler/.settings/org.eclipse.wst.common.component
+src/hpc-server/hpc-scheduler/.settings/org.eclipse.wst.common.project.facet.core.prefs.xml
+src/hpc-server/hpc-scheduler/.settings/org.eclipse.wst.common.project.facet.core.xml
+src/hpc-server/hpc-scheduler/.settings/org.eclipse.wst.jsdt.ui.superType.container
+src/hpc-server/hpc-scheduler/.settings/org.eclipse.wst.jsdt.ui.superType.name
+src/hpc-server/hpc-scheduler/.settings/org.eclipse.wst.validation.prefs
