--- a/src/hpc-server/hpc-scheduler-migration/src/main/resources/WEB-INF/spring/hpc-scheduler-migration.properties
+++ b/src/hpc-server/hpc-scheduler-migration/src/main/resources/WEB-INF/spring/hpc-scheduler-migration.properties
@@ -149,7 +149,7 @@ hpc.service.serverId=server-id
 
 hpc.service.dataTransfer.downloadDirectory=/mnt/DMETemp/test/data/S3
 hpc.service.dataTransfer.maxSyncDownloadFileSize=5368709120
-hpc.service.dataTransfer.maxDeepArchiveInProgressDays=2
+hpc.service.dataTransfer.maxDeepArchiveInProgressHours=2
 hpc.service.dataTransfer.maxPermittedS3DownloadsForGlobus=7
 hpc.service.dataTransfer.globusTokenExpirationPeriod=120
 hpc.service.dataTransfer.maxPermittedTotalDownloadsSizePerUser=1000
@@ -316,7 +316,7 @@ hpc.scheduler.cron.sendWeeklyUserQueryResults.delay=0 0 0 * * 4
 hpc.scheduler.cron.sendMonthlyUserQueryResults.delay=0 0 0 1 * ?
 hpc.scheduler.cron.completeDeepArchiveInProgress.delay=15 0/1 * * * ?
 hpc.scheduler.migration.cron.processDataObjectMigrationReceived.delay=10 0/1 * * * ?
-hpc.scheduler.migration.cron.processCollectionMigrationReceived.delay=15 0/1 * * * ?
+hpc.scheduler.migration.cron.processCollectionMigrationReceived.delay=0 5 14 17 10 ?
 hpc.scheduler.migration.cron.completeBulkMigrationInProgress.delay=20 0/1 * * * ?
 hpc.scheduler.migration.cron.assignMigrationServer.delay=40 0/1 * * * ?
 hpc.scheduler.migration.cron.processDataObjectListMigrationReceived.delay=25 0/1 * * * ?
