--- a/src/hpc-server/hpc-scheduler-migration/src/main/resources/WEB-INF/spring/hpc-scheduler-migration.properties
+++ b/src/hpc-server/hpc-scheduler-migration/src/main/resources/WEB-INF/spring/hpc-scheduler-migration.properties
@@ -321,4 +321,5 @@ hpc.scheduler.migration.cron.completeBulkMigrationInProgress.delay=20 0/1 * * * 
 hpc.scheduler.migration.cron.assignMigrationServer.delay=40 0/1 * * * ?
 hpc.scheduler.migration.cron.processDataObjectListMigrationReceived.delay=25 0/1 * * * ?
 hpc.scheduler.migration.cron.processCollectionListMigrationReceived.delay=35 0/1 * * * ?
+hpc.scheduler.migration.cron.processBulkMetadataUpdatetMigrationReceived.delay=32 0/1 * * * ?
 
