--- a/src/hpc-server/hpc-ws-rs-impl/src/main/resources/WEB-INF/spring/hpc-server.properties
+++ b/src/hpc-server/hpc-ws-rs-impl/src/main/resources/WEB-INF/spring/hpc-server.properties
@@ -124,6 +124,10 @@ hpc.ws.rs.auth.restrictedIPAddress=
 hpc.ws.rs.auth.metadataOnlyUsers=
 hpc.service.serverId=server-id
 
+hpc.ws.rs.auth.enableUserRateLimit=false
+hpc.ws.rs.auth.userRateLimitDurationSeconds=10
+hpc.ws.rs.auth.userRateLimitMaxRequest=20
+
 #hpc.ws.rs.auth.restrictedIPAddress=127.0.0.0/29,0:0:0:0:0:0:0:1/126,10.133.210.22,128.231.2.240
 #############################################################################
 # Business Services Properties.
