--- a/src/hpc-server/pom.xml
+++ b/src/hpc-server/pom.xml
@@ -52,6 +52,7 @@
 		<google-http-client.version>1.39.2</google-http-client.version>
 		<poi.version>4.1.2</poi.version>
 		<box.version>4.8.0</box.version>
+		<bucket4j.version>8.14.0</bucket4j.version>
 	</properties>
 
 	<modules>
@@ -470,6 +471,11 @@
 			    <groupId>com.box</groupId>
 			    <artifactId>box-java-sdk</artifactId>
 			    <version>${box.version}</version>
+			</dependency>
+			<dependency>
+			  <groupId>com.bucket4j</groupId>
+			  <artifactId>bucket4j_jdk17-core</artifactId>
+			  <version>${bucket4j.version}</version>
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
