HPC-2017 - code complete

--- a/src/hpc-server/hpc-scheduler-migration/src/main/resources/WEB-INF/spring/hpc-scheduler-migration.properties
+++ b/src/hpc-server/hpc-scheduler-migration/src/main/resources/WEB-INF/spring/hpc-scheduler-migration.properties
@@ -322,4 +322,5 @@ hpc.scheduler.migration.cron.assignMigrationServer.delay=40 0/1 * * * ?
 hpc.scheduler.migration.cron.processDataObjectListMigrationReceived.delay=25 0/1 * * * ?
 hpc.scheduler.migration.cron.processCollectionListMigrationReceived.delay=35 0/1 * * * ?
 hpc.scheduler.migration.cron.processBulkMetadataUpdatetMigrationReceived.delay=32 0/1 * * * ?
+hpc.scheduler.migration.cron.processDataObjectMetadataUpdatetMigrationReceived.delay=38 0/1 * * * ?
 
