HPCDATAMGM-2019 - added auth to the migration APIs

--- a/src/hpc-server/hpc-ws-rs-impl/src/main/resources/WEB-INF/spring/hpc-server.properties
+++ b/src/hpc-server/hpc-ws-rs-impl/src/main/resources/WEB-INF/spring/hpc-server.properties
@@ -120,6 +120,14 @@ hpc.ws.rs.auth.report.generate-report=SYSTEM_ADMIN GROUP_ADMIN
 hpc.ws.rs.auth.review.query-review=SYSTEM_ADMIN GROUP_ADMIN USER RESTRICTED
 hpc.ws.rs.auth.review.send-reminder=SYSTEM_ADMIN
 
+hpc.ws.rs.auth.data-migration.migrate-data-object=SYSTEM_ADMIN
+hpc.ws.rs.auth.data-migration.migrate-collection=SYSTEM_ADMIN
+hpc.ws.rs.auth.data-migration.migrate-data-objects-or-collections=SYSTEM_ADMIN
+hpc.ws.rs.auth.data-migration.retry-data-object-migration-task=SYSTEM_ADMIN
+hpc.ws.rs.auth.data-migration.retry-collection-migration-task=SYSTEM_ADMIN
+hpc.ws.rs.auth.data-migration.retry-data-objects-or-collections-migration-task=SYSTEM_ADMIN
+hpc.ws.rs.auth.data-migration.migrate-metadata=SYSTEM_ADMIN
+
 hpc.ws.rs.auth.restrictedIPAddress=
 hpc.ws.rs.auth.metadataOnlyUsers=
 hpc.service.serverId=server-id
