HPCDATAMGM-1969: Tomcat 10.1.x and Jakarata EE Upgrade
HPCDATAMGM-1971: CXF Upgrade

--- a/src/hpc-server/hpc-domain-types/pom.xml
+++ b/src/hpc-server/hpc-domain-types/pom.xml
@@ -158,5 +158,14 @@
 			<groupId>org.apache.cxf.xjc-utils</groupId>
 			<artifactId>cxf-xjc-runtime</artifactId>
 		</dependency>
+		<dependency>
+		    <groupId>jakarta.xml.bind</groupId>
+		    <artifactId>jakarta.xml.bind-api</artifactId>
+		</dependency>
+		<dependency>
+		    <groupId>com.sun.xml.bind</groupId>
+		    <artifactId>jaxb-impl</artifactId>
+		    <scope>runtime</scope>
+		</dependency>
 	</dependencies>
 </project>
