--- a/src/hpc-server/hpc-app-service-impl/pom.xml
+++ b/src/hpc-server/hpc-app-service-impl/pom.xml
@@ -97,12 +97,8 @@
 			<artifactId>spring-test</artifactId>
 		</dependency> 
 		<dependency>
-			<groupId>javax.mail</groupId>
-			<artifactId>javax.mail-api</artifactId>
-		</dependency>
-		<dependency>
-    		<groupId>javax.mail</groupId>
-    		<artifactId>mail</artifactId>
+			<groupId>jakarta.mail</groupId>
+			<artifactId>jakarta.mail-api</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>org.mockito</groupId>
