--- a/src/hpc-server/hpc-ws-rs-test/pom.xml
+++ b/src/hpc-server/hpc-ws-rs-test/pom.xml
@@ -133,8 +133,8 @@
 		</dependency>
 		<dependency>
     		<groupId>com.sun.mail</groupId>
-    		<artifactId>javax.mail</artifactId>
-    		<version>1.6.0-rc2</version>
+    		<artifactId>jakarta.mail</artifactId>
+    		<version>2.0.1</version>
 		</dependency>
 		<dependency> 
 		  <groupId>ch.qos.logback</groupId>
