HPCDATAMGM-1972: DME Web Upgrade to Tomcat 10.1

--- a/src/hpc-web/src/main/resources/appconfigs/common.conf
+++ b/src/hpc-web/src/main/resources/appconfigs/common.conf
@@ -118,5 +118,7 @@ dme.globus.public.endpoints=e2620047-6d04-11e5-ba46-22000b92c6ec|NIH HPC Data Tr
 # Max collection download size
 dme.max.allowed.download.size=3000000000000
 
+springdoc.swagger-ui.url=/config/api-docs.json
+
 # Keep this empty lines below
 
