HPCDATAMGM-1969: Tomcat 10.1.x and Jakarata EE Upgrade

--- a/src/hpc-server/hpc-app-service-impl/pom.xml
+++ b/src/hpc-server/hpc-app-service-impl/pom.xml
@@ -115,7 +115,8 @@
 		</dependency>
 		<dependency>
    			 <groupId>org.apache.tika</groupId>
-    		<artifactId>tika-bundle</artifactId>
+    		<artifactId>tika-parsers</artifactId>
+    		<type>pom</type>
 		</dependency>
 		<dependency>
 			<groupId>com.amazonaws</groupId>
