HPCDATAMGM-2040: Added new API for bulk delete of groups to aid in test data cleanup

--- a/src/hpc-server/hpc-ws-rs-impl/src/main/resources/WEB-INF/spring/hpc-server.properties
+++ b/src/hpc-server/hpc-ws-rs-impl/src/main/resources/WEB-INF/spring/hpc-server.properties
@@ -52,6 +52,7 @@ hpc.ws.rs.auth.security.update-group=SYSTEM_ADMIN GROUP_ADMIN
 hpc.ws.rs.auth.security.get-group=SYSTEM_ADMIN GROUP_ADMIN
 hpc.ws.rs.auth.security.get-groups=SYSTEM_ADMIN GROUP_ADMIN
 hpc.ws.rs.auth.security.delete-group=SYSTEM_ADMIN GROUP_ADMIN
+hpc.ws.rs.auth.security.delete-groups=SYSTEM_ADMIN
 hpc.ws.rs.auth.security.register-system-account=SYSTEM_ADMIN
 hpc.ws.rs.auth.security.refresh-data-management-configurations=SYSTEM_ADMIN
 hpc.ws.rs.auth.security.refresh-investigators=SYSTEM_ADMIN
